--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,22 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+<build>
+	<plugins>
+   	<plugin>
+       	<groupId>org.codehaus.mojo</groupId>
+       	<artifactId>exec-maven-plugin</artifactId>
+       	<version>1.3.2</version>
+       	<configuration>
+           	<mainClass>com.ravi.cal.RaviCalculator.Calculator</mainClass>
+<arguments> 
+<argument>-jar</argument>
+<argument>target/RaviCalculator-1.0.1-SNAPSHOT.jar</argument> 
+</arguments> 
+       	</configuration>
+   	</plugin>
+	</plugins>
+</build>
+
 </project>
 
